--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CSS ISSUE BOT 9000</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
@@ -28,9 +28,9 @@
 
   <h2>Issue Bot Camera Capture Archive</h2>
 
-  <img src="http://pictures.wayn.com/photos/180c/034546087_237927497.jpg" alt="Adam">
-  <img src="http://38.media.tumblr.com/70ace162d8f0654f3239aa7447a21870/tumblr_muvabkXjsz1qz6h81o1_1280.jpg" alt="Avi">
-  <img src="http://photos4.meetupstatic.com/photos/member/5/0/5/c/member_155060572.jpeg" alt="Spencer">
+  <img src="http://pictures.wayn.com/photos/180c/034546087_237927497.jpg" alt="Photo of Adam">
+  <img src="http://38.media.tumblr.com/70ace162d8f0654f3239aa7447a21870/tumblr_muvabkXjsz1qz6h81o1_1280.jpg" alt="Photo of Avi">
+  <img src="http://photos4.meetupstatic.com/photos/member/5/0/5/c/member_155060572.jpeg" alt="Photo of Spencer">
 
 </body>
 </html>
